# license-manager

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  Makefile  README.md  alembic.ini  pyproject.toml
app/license_manager/: uow.py
app/license_manager/api/: __init__.py  dependencies.py  errors.py  main.py
app/license_manager/audit/: __init__.py  emitter.py
app/license_manager/core/: helpers.py  settings.py
app/license_manager/db/: base.py  session.py
app/license_manager/middleware/: problem_details.py  request_id.py  timing.py
app/license_manager/observability/: logging.py
app/license_manager/repositories/: __init__.py  app_packages.py  audit_logs.py  base.py  customers.py  kinds.py  licenses.py  products.py  settings.py  smtp_credentials.py
app/license_manager/services/: __init__.py  app_packages_service.py  base_service.py  customers_service.py  dashboard_service.py  dropdown_service.py  email_background_jobs_service.py  email_service.py  healthcheck_service.py  kinds_service.py  license_background_jobs_service.py  licenses_service.py  products_service.py  smtp_credentials_service.py
app/license_manager/tasks/: celery_app.py
config/sample-env/: .env.example
docker/: api.Dockerfile  beat.Dockerfile  flower.Dockerfile  worker.Dockerfile  worker.Dockerfile.dockerignore
frontend/: .env.example  AGENTS.md  README.md  eslint.config.js  package.json
frontend/src/: App.tsx  index.css  main.tsx
frontend/src/api/: http-client.ts
frontend/src/app/: app.tsx  providers.tsx  query-client.ts  routes.tsx
frontend/src/auth/: AuthProvider.tsx  auth-context.ts  auth-session.ts  index.ts  keycloak.ts  useAuth.ts
frontend/src/config/: env.ts
frontend/src/hooks/: query-keys.ts  use-customers.ts  use-dashboard-overview.ts  use-query-states.ts
frontend/src/layout/: AppShell.tsx  Breadcrumbs.tsx  UserMenu.tsx  app-shell.css
frontend/src/pages/: AppPackagesPage.tsx  ArchivedLicensesPage.tsx  AuditLogsPage.tsx  CustomersPage.tsx  DashboardPage.tsx  LicenseKindsPage.tsx  LicensesPage.tsx  LoginPage.tsx  NotFoundPage.tsx  ProductsPage.tsx  SmtpCredentialsPage.tsx  feature-page-factory.tsx
frontend/src/services/: app-packages.service.ts  audit-logs.service.ts  customers.service.ts  health.service.ts  (+7 more)
repo_conf/: nexus.crt  pip.conf
tests/: conftest.py
tests/unit/: test_uow.py
(+124 files in other folders)
